# playwright-python-website

./: .env  .windsurfrules  .windsurfrules.yaml  LessonLearned.md  README.md  app.py  conftest.py  pyproject.toml  pytest.ini  requirements.txt
auth/: storage.json
config/: test_config.py
page_objects/: base_page.py  google_page.py
reports/: report.html
tests/components/: mock_google.html  test_search.py
tests/e2e/: test_example.py  test_google_search.py  test_mobile.py
tests/features/: __init__.py  conftest.py  google_search.feature  search.feature  test_search.py
tests/features/steps/: __init__.py  search_steps.py
utils/: test_helpers.py
